@@ -1,5 +1,5 @@
 /**
- * Copyright 2004-2017 the original author or authors.
+ * Copyright 2004-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -93,7 +93,7 @@ public class ParameterMap {
         .toArray(new ParameterMapping[parameterMappingList.size()]);
     parameterMappingIndex.clear();
     for (int i = 0; i < parameterMappings.length; i++) {
-      parameterMappingIndex.put(parameterMappings[i].getPropertyName(), new Integer(i));
+      parameterMappingIndex.put(parameterMappings[i].getPropertyName(), Integer.valueOf(i));
     }
     Map props = new HashMap();
     props.put("map", this);
