@@ -1,5 +1,5 @@
 /**
- * Copyright 2004-2017 the original author or authors.
+ * Copyright 2004-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -267,7 +267,7 @@ public class IterateContext implements Iterator {
       }
     }
     Map ret = new HashMap();
-    ret.put(PROCESS_INDEX, new Integer(modificationIndex));
+    ret.put(PROCESS_INDEX, Integer.valueOf(modificationIndex));
     ret.put(PROCESS_STRING, input);
     return ret;
   }
